--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <td>Marvel Movies</td>
             </tr>
             <tr>
-                <td>Black Panther: End Game</td>
+                <td>Black Panther</td>
             </tr>
         </table>
     </div>
